fix: incorrect mappers and sql-queries