@@ -2,8 +2,8 @@ package com.fcase.facility.repos;
 
 import com.fcase.facility.mappers.FishMapper;
 import com.fcase.facility.models.*;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import lombok.RequiredArgsConstructor;
 import lombok.ToString;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -19,14 +19,13 @@ public class FishRepo {
   public List<Fish> fetchByFacility(String facilityId) {
     String sql =
         """
-        SELECT fish.id, fish.name
+        SELECT fish_id AS id, fish.name AS name
         FROM FacilityFish
-        WHERE facility_id = ?
-        LEFT JOIN Fish as fish.id ON fish_id == id
+        INNER JOIN Fish AS fish ON fish_id = fish.id
+        WHERE facility_id = :facility_id
         """;
 
-    List<Fish> fishes =
-        jdbc.query(sql, Collections.singletonMap("facility_id", facilityId), rowMapper);
+    List<Fish> fishes = jdbc.query(sql, Map.of("facility_id", facilityId), rowMapper);
 
     return fishes;
   }
